apps/kubernetes-dashboard/templates/ingressRoute.yaml
# Source - https://stackoverflow.com/a
# Posted by jqknono
# Retrieved 2025-12-02, License - CC BY-SA 4.0

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`test.local`)
      kind: Rule
      services:
        - name: kubernetes-dashboard-kong-proxy
          port: 443
          scheme: https
          serversTransport: dashboard-transport
          namespace: kubernetes-dashboard
  tls:
    secretName: cluster1.example.com
    domains:
      - main: cluster1.example.com
        sans:
          - traefik1.example.com
